--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Primary Meta -->
+    <title>ShafaCode — Empowering Innovation with Transparent Code</title>
+    <meta name="description"
+      content="ShafaCode is a transparent software & SaaS studio. We design & build React/Next.js web apps, Flutter Android apps, IoT systems, and conversion-focused UI/UX — with proactive, win-win delivery." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="theme-color" content="#0F172A" />
+    <link rel="canonical" href="https://shafacode.com/" />
+
+    <!-- Favicons / PWA -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="ShafaCode" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shafacode.com/" />
+    <meta property="og:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
+    <meta property="og:description"
+      content="Custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT. Radical transparency. Proactive culture. Win-Win delivery." />
+    <!-- Put a 1200x630 image in /public -->
+    <meta property="og:image" content="%PUBLIC_URL%/shafacode-og.png" />
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
+    <meta name="twitter:description"
+      content="React/Next.js • Flutter • SaaS • UI/UX • IoT — built transparently and proactively." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/shafacode-og.png" />
+
+    <!-- SEO extras -->
+    <meta name="keywords"
+      content="ShafaCode, software studio, SaaS, React, Next.js, Flutter, Android, UI/UX, WordPress, IoT, ESP32, Raspberry Pi, Bangladesh" />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Performance: fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+
+    <!-- Structured Data: Organization + WebSite -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "ShafaCode",
+      "url": "https://shafacode.com/",
+      "logo": "https://shafacode.com/logo192.png",
+      "sameAs": [
+        "https://linkedin.com/company/shafacode",
+        "https://facebook.com/shafacode"
+      ],
+      "description": "Transparent software & SaaS studio building web, mobile and IoT products with a proactive, win-win culture."
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "ShafaCode",
+      "url": "https://shafacode.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://shafacode.com/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <style>
+        body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:0;padding:2rem;line-height:1.6;color:#0f172a}
+        .btn{display:inline-block;padding:.6rem 1rem;border-radius:.5rem;background:#2563eb;color:#fff;text-decoration:none}
+      </style>
+      <h1>ShafaCode — Empowering Innovation with Transparent Code</h1>
+      <p>We build custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT with radical transparency and a proactive, win-win culture.</p>
+      <ul>
+        <li>3 projects ongoing • 1 delivered • 5★ client satisfaction</li>
+      </ul>
+      <p><a class="btn" href="mailto:hello@shafacode.com">Contact: hello@shafacode.com</a></p>
+    </noscript>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
