whatssap number updated

--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
 
-    <!-- Primary Meta -->
-    <title>ShafaCode — Empowering Innovation with Transparent Code</title>
-    <meta name="description"
-      content="ShafaCode is a transparent software & SaaS studio. We design & build React/Next.js web apps, Flutter Android apps, IoT systems, and conversion-focused UI/UX — with proactive, win-win delivery." />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0F172A" />
-    <link rel="canonical" href="https://shafacode.com/" />
+<head>
+  <meta charset="utf-8" />
 
-    <!-- Favicons / PWA -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Primary Meta -->
+  <title>ShafaCode — Empowering Innovation with Transparent Code</title>
+  <meta name="description"
+    content="ShafaCode is a transparent software & SaaS studio. We design & build React/Next.js web apps, Flutter Android apps, IoT systems, and conversion-focused UI/UX — with proactive, win-win delivery." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0F172A" />
+  <link rel="canonical" href="https://shafacode.com/" />
 
-    <!-- Open Graph -->
-    <meta property="og:site_name" content="ShafaCode" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shafacode.com/" />
-    <meta property="og:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
-    <meta property="og:description"
-      content="Custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT. Radical transparency. Proactive culture. Win-Win delivery." />
-    <!-- Put a 1200x630 image in /public -->
-    <meta property="og:image" content="%PUBLIC_URL%/shafacode-og.png" />
+  <!-- Favicons / PWA -->
+  <!-- Favicons / PWA -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="16x16 32x32" type="image/x-icon" />
+  <link rel="icon" href="%PUBLIC_URL%/logo192.png" sizes="192x192" type="image/png" />
+  <link rel="icon" href="%PUBLIC_URL%/logo512.png" sizes="512x512" type="image/png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
-    <meta name="twitter:description"
-      content="React/Next.js • Flutter • SaaS • UI/UX • IoT — built transparently and proactively." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/shafacode-og.png" />
 
-    <!-- SEO extras -->
-    <meta name="keywords"
-      content="ShafaCode, software studio, SaaS, React, Next.js, Flutter, Android, UI/UX, WordPress, IoT, ESP32, Raspberry Pi, Bangladesh" />
-    <meta name="robots" content="index,follow" />
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="ShafaCode" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://shafacode.com/" />
+  <meta property="og:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
+  <meta property="og:description"
+    content="Custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT. Radical transparency. Proactive culture. Win-Win delivery." />
+  <!-- Put a 1200x630 image in /public -->
+  <meta property="og:image" content="%PUBLIC_URL%/shafacode-og.png" />
 
-    <!-- Performance: fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ShafaCode — Empowering Innovation with Transparent Code" />
+  <meta name="twitter:description"
+    content="React/Next.js • Flutter • SaaS • UI/UX • IoT — built transparently and proactively." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/shafacode-og.png" />
 
-    <!-- Structured Data: Organization + WebSite -->
-    <script type="application/ld+json">
+  <!-- SEO extras -->
+  <meta name="keywords"
+    content="ShafaCode, software studio, SaaS, React, Next.js, Flutter, Android, UI/UX, WordPress, IoT, ESP32, Raspberry Pi, Bangladesh" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Performance: fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+
+  <!-- Structured Data: Organization + WebSite -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
@@ -58,7 +63,7 @@
       "description": "Transparent software & SaaS studio building web, mobile and IoT products with a proactive, win-win culture."
     }
     </script>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
@@ -71,22 +76,38 @@
       }
     }
     </script>
-  </head>
+</head>
 
-  <body>
-    <noscript>
-      <style>
-        body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:0;padding:2rem;line-height:1.6;color:#0f172a}
-        .btn{display:inline-block;padding:.6rem 1rem;border-radius:.5rem;background:#2563eb;color:#fff;text-decoration:none}
-      </style>
-      <h1>ShafaCode — Empowering Innovation with Transparent Code</h1>
-      <p>We build custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT with radical transparency and a proactive, win-win culture.</p>
-      <ul>
-        <li>3 projects ongoing • 1 delivered • 5★ client satisfaction</li>
-      </ul>
-      <p><a class="btn" href="mailto:hello@shafacode.com">Contact: hello@shafacode.com</a></p>
-    </noscript>
+<body>
+  <noscript>
+    <style>
+      body {
+        font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+        margin: 0;
+        padding: 2rem;
+        line-height: 1.6;
+        color: #0f172a
+      }
 
-    <div id="root"></div>
-  </body>
+      .btn {
+        display: inline-block;
+        padding: .6rem 1rem;
+        border-radius: .5rem;
+        background: #2563eb;
+        color: #fff;
+        text-decoration: none
+      }
+    </style>
+    <h1>ShafaCode — Empowering Innovation with Transparent Code</h1>
+    <p>We build custom software, SaaS, Android (Flutter), web apps, WordPress, UI/UX & IoT with radical transparency and
+      a proactive, win-win culture.</p>
+    <ul>
+      <li>3 projects ongoing • 1 delivered • 5★ client satisfaction</li>
+    </ul>
+    <p><a class="btn" href="mailto:hello@shafacode.com">Contact: hello@shafacode.com</a></p>
+  </noscript>
+
+  <div id="root"></div>
+</body>
+
 </html>
