--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,14 @@
   <link rel="canonical" href="https://shafacode.com/" />
 
   <!-- Favicons / PWA -->
-  <!-- Favicons / PWA -->
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="16x16 32x32" type="image/x-icon" />
-  <link rel="icon" href="%PUBLIC_URL%/logo192.png" sizes="192x192" type="image/png" />
-  <link rel="icon" href="%PUBLIC_URL%/logo512.png" sizes="512x512" type="image/png" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Favicons -->
+  <link rel="icon" href="/logo16.png" sizes="16x16" type="image/png" />
+  <link rel="icon" href="/logo32.png" sizes="32x32" type="image/png" />
+  <link rel="apple-touch-icon" href="/logo180.png" sizes="180x180" />
+  <link rel="icon" href="/logo192.png" sizes="192x192" type="image/png" />
+  <link rel="icon" href="/logo512.png" sizes="512x512" type="image/png" />
+  <link rel="manifest" href="/manifest.json" />
+
 
 
   <!-- Open Graph -->
