--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,13 @@
 
   <!-- Favicons / PWA -->
   <!-- Favicons -->
-  <link rel="icon" href="/logo16.png" sizes="16x16" type="image/png" />
-  <link rel="icon" href="/logo32.png" sizes="32x32" type="image/png" />
+  <!-- <link rel="icon" href="/logo16.png" sizes="16x16" type="image/png" /> -->
+  <!-- <link rel="icon" href="/logo32.png" sizes="32x32" type="image/png" /> -->
   <link rel="apple-touch-icon" href="/logo180.png" sizes="180x180" />
-  <link rel="icon" href="/logo192.png" sizes="192x192" type="image/png" />
-  <link rel="icon" href="/logo512.png" sizes="512x512" type="image/png" />
+  <!-- <link rel="icon" href="/logo192.png" sizes="192x192" type="image/png" /> -->
+  <!-- <link rel="icon" href="/logo512.png" sizes="512x512" type="image/png" /> -->
+  <!-- <link rel="icon" href="/logo512.png" sizes="512x512" type="image/png" /> -->
+  <link rel="icon" href="./assets/logo/logo.png" type="image/png">
   <link rel="manifest" href="/manifest.json" />
 
 
